name:           unix
version:        3.0.0.0
-- NOTE: Don't forget to update ./changelog.md
license:        BSD3
license-file:   LICENSE
maintainer:     libraries@haskell.org
homepage:       https://github.com/haskell/unix
bug-reports:    https://github.com/haskell/unix/issues
synopsis:       POSIX functionality
category:       System
build-type:     Simple
cabal-version:  >= 1.25
tested-with:    GHC>=8.1
description:
    This package gives you access to the set of operating system
    services standardised by
    <http://pubs.opengroup.org/onlinepubs/9699919799/ POSIX.1-2008>
    (or the IEEE Portable Operating System Interface for Computing
    Environments - IEEE Std. 1003.1).
    .
    The package is not supported under Windows.

extra-source-files:
    changelog.md

source-repository head
    type:     git
    location: https://github.com/haskell/unix.git

library
    default-language: Haskell2010
    other-extensions:
        CApiFFI
        CPP
        DeriveDataTypeable
        InterruptibleFFI
        NondecreasingIndentation
        RankNTypes
        RecordWildCards
        Safe
        Trustworthy

    if os(windows)
        -- This package currently supports neither Cygwin nor MinGW,
        -- therefore os(windows) is effectively not supported.
        build-depends: unbuildable<0

    build-depends:
        base        >= 4.5     && < 4.10,
        bytestring  >= 0.9.2   && < 0.11,
        time        >= 1.2     && < 1.7,
        filepath-bytestring >= 0.1 && < 0.2,
        filepath-string     >= 0.1 && < 0.2,
        str-bytestring      >= 0.1 && < 0.2,
        str-string          >= 0.1 && < 0.2,
        unix-env,
        unix-fs,
        unix-process,
        unix-common >= 3.0     && < 3.1

    mixins:
        unix-env
            requires (Str as Str.String),
        unix-env
            (System.Posix.Env as System.Posix.Env.ByteString)
            requires (Str as Str.ByteString),
        unix-fs requires (FilePath as FilePath.String),
        unix-fs
            (System.Posix.Directory as System.Posix.Directory.ByteString,
             System.Posix.Files     as System.Posix.Files.ByteString,
             System.Posix.Temp      as System.Posix.Temp.ByteString,
             System.Posix.IO        as System.Posix.IO.ByteString,
             System.Posix.DynamicLinker as System.Posix.DynamicLinker.ByteString,
             System.Posix.DynamicLinker.Module as System.Posix.DynamicLinker.Module.ByteString,
             System.Posix.FsUtils   as System.Posix.FsUtils.ByteString,
             System.Posix.Terminal  as System.Posix.Terminal.ByteString)
            requires (FilePath as FilePath.ByteString),
        unix-process requires (Str as Str.String, FilePath as FilePath.String),
        unix-process
            (System.Posix.Process as System.Posix.Process.ByteString)
            requires (Str as Str.ByteString, FilePath as FilePath.ByteString)

    exposed-modules:
        System.Posix
        System.Posix.ByteString
        System.Posix.ByteString.FilePath

        System.Posix.Resource
        System.Posix.Time
        System.Posix.Unistd
        System.Posix.User
        System.Posix.Signals
        System.Posix.Signals.Exts
        System.Posix.Semaphore
        System.Posix.SharedMem

        System.Posix.Fcntl

    reexported-modules:
        System.Posix.Error,
        System.Posix.Env,
        System.Posix.Env.ByteString,
        System.Posix.Directory,
        System.Posix.Directory.ByteString,
        System.Posix.Files,
        System.Posix.Files.ByteString,
        System.Posix.Temp,
        System.Posix.Temp.ByteString,
        System.Posix.IO,
        System.Posix.IO.ByteString,
        System.Posix.DynamicLinker,
        System.Posix.DynamicLinker.ByteString,
        System.Posix.DynamicLinker.Module,
        System.Posix.DynamicLinker.Module.ByteString,
        System.Posix.Terminal,
        System.Posix.Terminal.ByteString,
        System.Posix.Process,
        System.Posix.Process.ByteString

    ghc-options: -Wall
